// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`regressions > loading null doesnt loop 3`] = `
{
  "data": null,
  "depends": 1,
  "error": null,
  "load_state": "loaded",
}
`;

exports[`when circuit-breaking: false > receiving request 1`] = `
{
  "App.useAsync-1": {
    "data": null,
    "depends": 1,
    "error": null,
    "load_state": "loading",
  },
  "App.useState-0": {
    "load_state": "loaded",
    "value": 1,
  },
  "__cache": {},
}
`;

exports[`when circuit-breaking: false > receiving response 1`] = `
{
  "data": "hi world!",
  "depends": 1,
  "error": null,
  "load_state": "loaded",
}
`;

exports[`when circuit-breaking: true > receiving request 1`] = `
{
  "App.useAsync-1": {
    "data": null,
    "depends": 1,
    "error": null,
    "load_state": "loading",
  },
  "App.useState-0": {
    "load_state": "loaded",
    "value": 1,
  },
  "__cache": {},
}
`;

exports[`when circuit-breaking: true > receiving response 1`] = `
{
  "data": "hi world!",
  "depends": 1,
  "error": null,
  "load_state": "loaded",
}
`;
